[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wagtail_site"
version = "0.5.0"
description = "A reusable Django app for creating wagtail websites"
requires-python = ">=3.10"
dependencies = [
    'Django>=4.2',
    'django-widget-tweaks>=1.5.0',
    'django-modelcluster>=6.4',
    'django-taggit>=6.1.0',
    'wagtail>=6.4.1',
    'wagtail-localize>=1.12.1',
]